--- a/localisation/India.csv
+++ b/localisation/India.csv
@@ -1,5 +1,5 @@
 ﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
-PROV1013;洛里;;;;;;;;;;x
+PROV1013;萝莉;;;;;;;;;;x
 PROV1112;摩菟来;;;;;;;;;;x
 PROV1113;查盖;;;;;;;;;;x
 PROV1114;摩呼耶陀补罗;;;;;;;;;;x
@@ -14,7 +14,7 @@ PROV1122;优陀耶耆厘;;;;;;;;;;x
 PROV1123;瓶耆罗;;;;;;;;;;x
 PROV1124;胡奴梨;;;;;;;;;;x
 PROV1125;檀那;;;;;;;;;;x
-PROV1126;达曼;;;;;;;;;;x
+PROV1126;昙门;;;;;;;;;;x
 PROV1127;那婆萨利迦;;;;;;;;;;x
 PROV1128;毗娑迦波多那;;;;;;;;;;x
 PROV1129;伽多迦;;;;;;;;;;x
@@ -29,7 +29,7 @@ PROV1137;曼苏拉;;;;;;;;;;x
 PROV1138;巴卡尔;;;;;;;;;;x
 PROV1139;莫克兰;;;;;;;;;;x
 PROV1140;婆拿婆赐;;;;;;;;;;x
-PROV1141;柯尔;;;;;;;;;;x
+PROV1141;憍罗;;;;;;;;;;x
 PROV1142;波罗提湿檀那;;;;;;;;;;x
 PROV1143;伽莲尼;;;;;;;;;;x
 PROV1144;憍梨波稽;;;;;;;;;;x
@@ -746,13 +746,13 @@ k_malwa;摩腊婆;;;;;;;;;;x
 d_dadhipadra;阿槃底;;;;;;;;;;x
 d_akara_dasarna;阿伽罗达萨那;;;;;;;;;;x
 d_anupa;阿耨钵;;;;;;;;;;x
-k_kosala;憍萨罗;;;;;;;;;;x
+k_kosala;骄萨罗;;;;;;;;;;x
 d_kanyakubja;曲女城;;;;;;;;;;x
 d_saryupara;萨由波罗;;;;;;;;;;x
 d_jejakabhukti;祇奢伽伏帝;;;;;;;;;;x
 e_bengal;旁伽罗帝国;;;;;;;;;;x
 e_bengal_adj;旁伽罗;;;;;;;;;;x
-k_gondwana;憍陀罗尼耶;;;;;;;;;;x
+k_gondwana;骄陀罗尼耶;;;;;;;;;;x
 d_dahala;佗诃罗;;;;;;;;;;x
 d_ratanpur;罗檀城;;;;;;;;;;x
 k_bengal;旁伽罗;;;;;;;;;;x
@@ -2226,7 +2226,7 @@ b_nagauda;那乔佗;;;;;;;;;;x
 b_ladnu;罗努;;;;;;;;;;x
 b_makrana;摩罗那;;;;;;;;;;x
 b_ladnun;罗努恩;;;;;;;;;;x
-b_kuchaman;古贾;;;;;;;;;;x
+b_kuchaman;古贾曼;;;;;;;;;;x
 b_mundwa;蒙德拉;;;;;;;;;;x
 c_ludrava;律陀罗婆;;;;;;;;;;x
 c_ludrava_adj;律陀罗婆;;;;;;;;;;x
