--- a/localisation/v1_101.csv
+++ b/localisation/v1_101.csv
@@ -32,8 +32,8 @@ CelticPortraitsDLC;凯尔特群像;;;;;;;;;;x
 broken_spirit;意志消沉;;;;;;;;;;x
 opinion_subjugated_other_rel;征服其他宗教;;;;;;;;;;x
 d_meath_adj_irish;塔兰的;;;;;;;;;;x
-d_ghanan_band;加纳军团;;;;;;;;;;x
-d_ghanan_band_adj;加纳的;;;;;;;;;;x
+d_ghanan_band;加纳大队;;;;;;;;;;x
+d_ghanan_band_adj;加纳大队;;;;;;;;;;x
 AIREASON_CONSORT_CLAIMANT;是宣称者;;;;;;;;;;x
 hellenic_pagan;希腊多神教;;;;;;;;;;x
 hellenic_pagan_DESC;希腊化的多神教信奉朱庇特, 马尔斯, 墨丘利, 维纳斯, 密涅瓦和维斯塔等十二主神. 它发源于古希腊, 并伴随亚历山大大帝和罗马帝国的征服成为了地中海世界的主要宗教, 直到基督教崛起.;;;;;;;;;;x
