--- a/localisation/v1_103.csv
+++ b/localisation/v1_103.csv
@@ -1,2 +1,2 @@
 ﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
-REVOKE_TITLE_INTERACTION_2H;帝国宫廷授予我们夺回我们应有的首都§Y$CAPITAL$§! 没有贵族反对这一行动.;;;;;;;;;;x
+REVOKE_TITLE_INTERACTION_2H;帝国宫廷准予我们夺回合法的首都§Y$CAPITAL$§!，没有贵族反对这一行动。;;;;;;;;;;x
