--- a/localisation/v1_10b.csv
+++ b/localisation/v1_10b.csv
@@ -13,7 +13,7 @@ job_spiritual_slavic_pagan_reformed;祭司;;;;;;;;;;x
 job_spiritual_tengri_pagan;萨满;;;;;;;;;;x
 job_spiritual_tengri_pagan_reformed;萨满;;;;;;;;;;x
 job_spiritual_zoroastrian;大祭司;;;;;;;;;;x
-nick_hardeknud;强壮的克努特;;;;;;;;;;x
+nick_hardeknud;哈德克努特;;;;;;;;;;x
 steppe;大草原;;;;;;;;;;x
 TOGGLE_LOOTER_FAIL_CHARALLOWED;领主允许掠夺;;;;;;;;;;x
 TOGGLE_LOOTER_FAIL_INOWNLAND;部队正在友邦行进;;;;;;;;;;x
