--- a/localisation/v2_15.csv
+++ b/localisation/v2_15.csv
@@ -7,7 +7,7 @@ ca_culture_nubian_1;努比亚战士兵营;;;;;;;;;;x
 ca_culture_nubian_2;努比亚战士兵营;;;;;;;;;;x
 ca_culture_nubian_3;努比亚战士兵营;;;;;;;;;;x
 ca_culture_nubian_4;努比亚战士兵营;;;;;;;;;;x
-ca_culture_nubian_1_desc;这些兵营是古代努比亚战士传统的培养和发展的地方。努比亚自古代起就以其精湛的弓箭手而备受尊敬，其他的精英步兵部队也得到训练以支护这一努比亚统治者的有力武器。;;;;;;;;;;x
+ca_culture_nubian_1_desc;这些兵营是古代努比亚战士传统培养和发展的地方。努比亚自古代起就以其精湛的弓箭手而备受尊敬，其他的步兵精英单位也经过充分训练演习，以支援这一努比亚统治者的有力武器。;;;;;;;;;;x
 temple_baron_slavic_pagan;萨满;;;;;;;;;;x
 temple_baron_slavic_pagan_reformed;萨满;;;;;;;;;;x
 temple_baron_baltic_pagan;萨满;;;;;;;;;;x
