--- a/localisation/v2_30f.csv
+++ b/localisation/v2_30f.csv
@@ -41,7 +41,7 @@ IberianPortraitsDLC;伊比利亚肖像包;;;;;;;;;;x
 tut_0a_7b;提示：你可以右键点击角色头像来打开该角色的外交菜单.;;;;;;;;;;x
 tut_4a_4;作为开始，右键点击你的同父异母兄弟,阿瑟尔伯爵马穆尔。你会发现他出现在家族界面的底端左侧，位于诸同辈亲属之首。(你在这里看到的头像只是一个例子，并不是代表实际上的伯爵。);;;;;;;;;;x
 tut_4a_5;在左侧,我们可以看到可执行外交行动的菜单.在右侧你将可以修正外交选择,并且可以看到你的外交选择会造成怎样的结果.点击下一步继续.;;;;;;;;;;x
-tut_6a_12;现在是真正宣战的时刻了。那么在此再次点击S鴕oyar。右键点击头像以打开外交菜单。;;;;;;;;;;x
+tut_6a_12;现在是真正宣战的时刻了。那么在此再次点击南岛。右键点击头像以打开外交菜单。;;;;;;;;;;x
 tut_4c_9;深思熟虑以采取最好的抉择,不要忘记婚姻对象所属的王朝及其头衔会影响你的威望值的得失.当你做好决定后,右键点击她的头像以继续.;;;;;;;;;;x
 ca_culture_moors_2;摩尔骑兵营;;;;;;;;;;x
 ca_culture_moors_3;摩尔骑兵营;;;;;;;;;;x
