--- a/localisation/v2_50.csv
+++ b/localisation/v2_50.csv
@@ -1,7 +1,7 @@
 ﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 ERA_CHAR_NAME_6392;查理曼;;;;;;;;;;x
 ERA_CHAR_NAME_144999;卡洛曼一世;;;;;;;;;;x
-ERA_CHAR_NAME_190347;伦巴底 德西德里乌斯;;;;;;;;;;x
+ERA_CHAR_NAME_190347;伦巴第王狄西德里乌斯;;;;;;;;;;x
 ERA_CHAR_NAME_73679;阿卜杜拉赫曼一世;;;;;;;;;;x
 ERA_CHAR_NAME_34002;曼苏尔;;;;;;;;;;x
 ERA_CHAR_NAME_74413;奎师那一世;;;;;;;;;;x
@@ -17,7 +17,7 @@ ERA_CHAR_NAME_1128;罗伯特 吉斯卡德;;;;;;;;;;x
 ERA_CHAR_NAME_3096;穆斯坦绥尔 比拉;;;;;;;;;;x
 ERA_CHAR_NAME_3040;阿尔普 阿尔斯兰;;;;;;;;;;x
 ERA_CHAR_NAME_74441;索梅斯瓦拉一世;;;;;;;;;;x
-ERA_CHAR_NAME_457620;卡斯提尔 费尔南多三世;;;;;;;;;;x
+ERA_CHAR_NAME_457620;卡斯蒂利亚 费尔南多三世;;;;;;;;;;x
 ERA_CHAR_NAME_212513;费尔南多二世;;;;;;;;;;x
 ERA_CHAR_NAME_30809;耶路撒冷 伊莎贝拉二世;;;;;;;;;;x
 ERA_CHAR_NAME_93052;花剌子模 穆罕默德二世;;;;;;;;;;x
