--- a/localisation/RulerDesigner.csv
+++ b/localisation/RulerDesigner.csv
@@ -1,7 +1,7 @@
 ﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 RD_APPEARANCE;外貌;;;;;;;;;;x
 RD_COAT_OF_ARMS;盾徽;;;;;;;;;;x
-RD_ATTRIBUTES;能力;;;;;;;;;;x
+RD_ATTRIBUTES;属性;;;;;;;;;;x
 RD_ETHNICITY;种族;;;;;;;;;;x
 RD_EYES;眼睛;;;;;;;;;;x
 RD_NOSE;鼻子;;;;;;;;;;x
@@ -45,43 +45,43 @@ coa_plain;无花纹;;;;;;;;;;x
 RD_LINK_PATTERN;连接所有栏位的花纹;;;;;;;;;;x
 RD_LINK_COLOR;连接所有栏位的颜色;;;;;;;;;;x
 RD_MARRIED;勾选以使人物处于已婚状态;;;;;;;;;;x
-RD_CLEARTRAITS;移除所有特征\n右击某项特质以单独去除;;;;;;;;;;x
-RD_DIPLOMACY;外交:;;;;;;;;;;x
-RD_MARTIAL;军事:;;;;;;;;;;x
-RD_STEWARDSHIP;财政:;;;;;;;;;;x
-RD_INTRIGUE;智谋:;;;;;;;;;;x
-RD_LEARNING;学识:;;;;;;;;;;x
-RD_HEALTH;健康:;;;;;;;;;;x
-RD_FERTILITY;生育:;;;;;;;;;;x
-RD_SONS;儿子:;;;;;;;;;;x
-RD_DAUGHTERS;女儿:;;;;;;;;;;x
+RD_CLEARTRAITS;移除所有特质\n右键点击某项特质以单独去除;;;;;;;;;;x
+RD_DIPLOMACY;外交：;;;;;;;;;;x
+RD_MARTIAL;军事：;;;;;;;;;;x
+RD_STEWARDSHIP;财政：;;;;;;;;;;x
+RD_INTRIGUE;智谋：;;;;;;;;;;x
+RD_LEARNING;学识：;;;;;;;;;;x
+RD_HEALTH;健康：;;;;;;;;;;x
+RD_FERTILITY;生育力：;;;;;;;;;;x
+RD_SONS;儿子：;;;;;;;;;;x
+RD_DAUGHTERS;女儿：;;;;;;;;;;x
 RD_FIRST_NAME;名字;;;;;;;;;;x
 RD_DYNASTY;家族;;;;;;;;;;x
-RD_MARRIED2;婚姻状态:;;;;;;;;;;x
-RD_CULTURE;文化:;;;;;;;;;;x
-RD_RELIGION;宗教:;;;;;;;;;;x
+RD_MARRIED2;婚姻状态：;;;;;;;;;;x
+RD_CULTURE;文化：;;;;;;;;;;x
+RD_RELIGION;宗教：;;;;;;;;;;x
 RD_EDUCATION;教育;;;;;;;;;;x
 RD_TRAITS;特质;;;;;;;;;;x
 RD_FINISH;完成;;;;;;;;;;x
-RD_IS_MALE;人物为男性，点击以改变;;;;;;;;;;x
-RD_IS_FEMALE;人物为女性，点击以改变;;;;;;;;;;x
+RD_IS_MALE;人物为男性，点击改变性别;;;;;;;;;;x
+RD_IS_FEMALE;人物为女性，点击改变性别;;;;;;;;;;x
 RD_NOT_PLAYABLE;§R不能扮演信奉此宗教的人物§!;;;;;;;;;;x
 RD_OPEN_RULER_DESIGNER;打开人物设计器;;;;;;;;;;x
 RD_CHANGE_GRAPHICAL_CULTURE;更换文化图标;;;;;;;;;;x
 RD_CHANGE_CULTURE;更换文化;;;;;;;;;;x
 RD_CHANGE_RELIGION;更换宗教;;;;;;;;;;x
 RD_CHANGE_EDUCATIONAL_TRAIT;更换教育特质;;;;;;;;;;x
-RD_CUSTOMIZED_AGE;年龄: $AGE$ ( 最大值: $MAX$ );;;;;;;;;;x
+RD_CUSTOMIZED_AGE;年龄：$AGE$（最大值：$MAX$）;;;;;;;;;;x
 RD_RANDOMIZE;随机生成;;;;;;;;;;x
-RD_FAIL_AGE;人物过于年老,不能以之开始游戏;;;;;;;;;;x
-RD_FAIL_CHILDREN;人物过于年轻，不能拥有如此多的儿女，年龄最小值为16加上儿女的数量;;;;;;;;;;x
+RD_FAIL_AGE;人物过于年老，不能以之开始游戏;;;;;;;;;;x
+RD_FAIL_CHILDREN;人物过于年轻，不能拥有当前数量的子女，年龄最小值为 16 加上子女的数量;;;;;;;;;;x
 RD_EXTRA_CLICK;点击以改变\n按住Shift键以五倍增减\n按住Ctrl键以十倍增减;;;;;;;;;;x
 RD_RESET;重置;;;;;;;;;;x
 RD_FAIL_NO_NAME;你需要设定此人物的名字;;;;;;;;;;x
 RD_FAIL_NO_DYN_NAME;你需要设定此人物的家族名;;;;;;;;;;x
 RD_RULER_DESIGNER;人物设计器;;;;;;;;;;x
 RD_FAIL_NO_UNPLAYABLE;§R不能自定义不可扮演人物§!;;;;;;;;;;x
-RD_FAIL_NO_DLC;§R你需要人物设计器DLC§!;;;;;;;;;;x
+RD_FAIL_NO_DLC;§R你需要人物设计器 DLC§!;;;;;;;;;;x
 RD_FAIL_SAME_NAME;不能与被替换的人物同名;;;;;;;;;;x
 RD_CHANGE_SONS;改变此人物的儿子数量;;;;;;;;;;x
 RD_CHANGE_DAUGHTERS;改变此人物的女儿数量;;;;;;;;;;x
