--- a/localisation/v1_06.csv
+++ b/localisation/v1_06.csv
@@ -555,7 +555,7 @@ c_byzantion_adj;君士坦丁堡;;;;;;;;;;x
 d_hashshashin;哈萨辛;;;;;;;;;;x
 GRANDHEADMASTER;大长老;;;;;;;;;;x
 GRANDHEADMASTER_FOA;阁下;;;;;;;;;;x
-DEATH_MURDER_HASHSHASHIN;死于哈萨辛之手;;;;;;;;;;x
+DEATH_MURDER_HASHSHASHIN;死于阿萨辛派之手;;;;;;;;;;x
 EXPECTED_TO_HAVE_MORE_WIVES;妻子数量少于§Y$NUM$§!: §R$PRESTIGE$§!;;;;;;;;;;x
 EXPECTED_TO_HAVE_FEWER_WIVES;妻子数量多于§Y$NUM$§!: §G+$PRESTIGE$§!;;;;;;;;;;x
 tp_monastery_1_muslim;祈祷室;;;;;;;;;;x
@@ -740,37 +740,37 @@ EVTOPTB60115;野蛮;;;;;;;;;;x
 EVTOPTB39010;不, 等等. 我又想了想...;;;;;;;;;;x
 EVTNAME88000;刺客的诞生;;;;;;;;;;x
 EVTOPTA88000;这些抽大麻的瘾君子人畜无害...;;;;;;;;;;x
-EVTDESC88001;哈萨辛, 这个神鬼莫测的刺客组织, 将他们的势力范围扩展到了叙利亚. 他们在山寨迈斯拉夫堡建立了一个分支, 并以此为据点控制周围地区. 刺客们在整个圣地猎杀那些他们视为阻碍自己的密谋的人;;;;;;;;;;x
+EVTDESC88001;阿萨辛派, 这个神鬼莫测的刺客组织, 将他们的势力范围扩展到了叙利亚. 他们在山寨迈斯拉夫堡建立了一个分支, 并以此为据点控制周围地区. 刺客们在整个圣地猎杀那些他们视为阻碍自己的密谋的人;;;;;;;;;;x
 EVTNAME88001;阿萨辛扩展到了叙利亚;;;;;;;;;;x
-EVTOPTA88001;或许该严肃对待哈萨辛派了...;;;;;;;;;;x
-EVTDESC88002;随着最后一个据点的陷落, 哈萨辛 - 臭名昭著的刺客组织 - 已在风中消散. 少数残党已隐姓埋名, 苟延残喘, 幻想着某天还能东山再起;;;;;;;;;;x
+EVTOPTA88001;或许该严肃对待阿萨辛派了...;;;;;;;;;;x
+EVTDESC88002;随着最后一个据点的陷落, 阿萨辛派 - 臭名昭著的刺客组织 - 已在风中消散. 少数残党已隐姓埋名, 苟延残喘, 幻想着某天还能东山再起;;;;;;;;;;x
 EVTNAME88002;阿萨辛消散了!;;;;;;;;;;x
 EVTOPTA88002;他们的灭亡早已注定.;;;;;;;;;;x
-EVTDESC88003;哈萨辛又回来了! 通过种种方法, 它的残党在这些年里成功地恢复了这个组织昔日的荣光. 从暗影中出击, 他们夺回了他们的一个旧日据点. 现在他们训练有素的杀手再次开始猎杀与他们有利益冲突的人...;;;;;;;;;;x
+EVTDESC88003;阿萨辛派又回来了! 通过种种方法, 它的残党在这些年里成功地恢复了这个组织昔日的荣光. 从暗影中出击, 他们夺回了他们的一个旧日据点. 现在他们训练有素的杀手再次开始猎杀与他们有利益冲突的人...;;;;;;;;;;x
 EVTNAME88003;阿萨辛重出江湖!;;;;;;;;;;x
 EVTOPTA88003;他们肯定不敢拿我怎么样.;;;;;;;;;;x
-EVTDESC88004;哈萨辛已经彻底消失了. 随着堡垒的熊熊大火, 一个个哈萨辛的余孽们如动物般被冷酷屠宰. 他们唯一的遗物, 便是那些关于哈萨辛的传说了;;;;;;;;;;x
+EVTDESC88004;阿萨辛派已经彻底消失了. 随着堡垒的熊熊大火, 一个个哈萨辛的余孽们如动物般被冷酷屠宰. 他们唯一的遗物, 便是那些关于哈萨辛的传说了;;;;;;;;;;x
 EVTNAME88004;阿萨辛已灭亡!;;;;;;;;;;x
 EVTOPTA88004;总算除掉他们了!;;;;;;;;;;x
-EVTDESC88007;流言如野火般在东方的大地上传播开来! 哈萨辛刺杀了大领主[From.GetTitledName]. 在他的营地里, 在众目睽睽之下, 他们将匕首刺入了他的胸膛, 尽管这些刺客们只比[From.GetTitle]多活了不过几秒钟, 他们还是完成了任务. 他的部下宣誓要对阿萨辛进行复仇!;;;;;;;;;;x
+EVTDESC88007;流言如野火般在东方的大地上传播开来! 阿萨辛派刺杀了大领主[From.GetTitledName]. 在他的营地里, 在众目睽睽之下, 他们将匕首刺入了他的胸膛, 尽管这些刺客们只比[From.GetTitle]多活了不过几秒钟, 他们还是完成了任务. 他的部下宣誓要对阿萨辛进行复仇!;;;;;;;;;;x
 EVTNAME88007;[From.GetTitle] 死了!;;;;;;;;;;x
 EVTOPTA88007;先知在上!;;;;;;;;;;x
-EVTDESC88009;即便是可怕的哈萨辛也没能使蒙古人征服世界的步伐停下一步. 他们的一些成员在刺杀[From.GetTitledName]的行动中失败被处死. 他和他的部下现在发誓要对可憎的哈萨辛教派发起复仇.;;;;;;;;;;x
+EVTDESC88009;即便是可怕的阿萨辛派也没能使蒙古人征服世界的步伐停下一步. 他们的一些成员在刺杀[From.GetTitledName]的行动中失败被处死. 他和他的部下现在发誓要对可憎的哈萨辛教派发起复仇.;;;;;;;;;;x
 EVTNAME88009;[From.GetTitle]挫败了哈萨辛!;;;;;;;;;;x
 EVTOPTA88009;先知在上!;;;;;;;;;;x
-EVTDESC88010;带着一身冷汗你突然醒来, 一个强烈的感觉告诉你有些事不对劲. 帐篷里摇曳的烛光下, 可见一盘热饼干和一把插在床边的匕首. 匕首抹了毒, 上面还插着一张纸条: "改过自新, 为时未晚, [Root.GetFirstName]. 哈萨辛在看着你.";;;;;;;;;;x
+EVTDESC88010;带着一身冷汗你突然醒来, 一个强烈的感觉告诉你有些事不对劲. 帐篷里摇曳的烛光下, 可见一盘热饼干和一把插在床边的匕首. 匕首抹了毒, 上面还插着一张纸条: "改过自新, 为时未晚, [Root.GetFirstName]. 阿萨辛派在看着你.";;;;;;;;;;x
 EVTOPTA88010;或许真该改改了...;;;;;;;;;;x
-EVTDESC88011;主公, 大事不好! 你忠实的仆人, [From.GetTitledName], 被发现死在了[From.GetHerHis]家里, 无疑这出自卑鄙的哈萨辛之手. 插入[From.GetHerHis]胸膛的匕首上有留言: "[Root.GetFirstName] - 你已经被警告过了.";;;;;;;;;;x
+EVTDESC88011;主公, 大事不好! 你忠实的仆人, [From.GetTitledName], 被发现死在了[From.GetHerHis]家里, 无疑这出自卑鄙的阿萨辛派之手. 插入[From.GetHerHis]胸膛的匕首上有留言: "[Root.GetFirstName] - 你已经被警告过了.";;;;;;;;;;x
 EVTOPTA88011;他们竟敢如此?!;;;;;;;;;;x
-EVTDESC88012;正当你在[Root.Location.GetName]转过一个街角的时候, 一个奇怪的哨声在你耳边响起. 你的亲卫翻倒在地, 脖子上都插着匕首. 在你做出任何反应之前, 你发现自己被一群穿斗篷的哈萨辛围住了. 他们的首领走了出来, 脸上带着一副悲哀的神情. "愿您在身后能找到您所追寻的, 朋友.";;;;;;;;;;x
+EVTDESC88012;正当你在[Root.Location.GetName]转过一个街角的时候, 一个奇怪的哨声在你耳边响起. 你的亲卫翻倒在地, 脖子上都插着匕首. 在你做出任何反应之前, 你发现自己被一群穿斗篷的阿萨辛派围住了. 他们的首领走了出来, 脸上带着一副悲哀的神情. "愿您在身后能找到您所追寻的, 朋友.";;;;;;;;;;x
 EVTOPTA88012;但... 但是我还没准备好!;;;;;;;;;;x
-EVTDESC88016;[From.GetTitledName]踉跄地穿过你的亲卫, 鲜血从十几处刀伤中喷涌而出. 在[From.GetSheHe]倒在你脚下的血泊中时, [From.GetSheHe]喘出了[From.GetHerHis]最后一口气: "哈-哈萨辛...";;;;;;;;;;x
+EVTDESC88016;[From.GetTitledName]踉跄地穿过你的亲卫, 鲜血从十几处刀伤中喷涌而出. 在[From.GetSheHe]倒在你脚下的血泊中时, [From.GetSheHe]喘出了[From.GetHerHis]最后一口气: "阿-阿萨辛派...";;;;;;;;;;x
 EVTOPTA88016;哦天哪.;;;;;;;;;;x
-EVTDESC88017;卫士带进来一个遗留在宫外的盖住的篮子. 你以为这是某个下属送来的甜点, 兴冲冲地打开了盖子, 却发现了[From.GetTitledName]那满脸狰狞, 被戳了几个窟窿的人头。前额上, 刻了一个哈萨辛的标记.;;;;;;;;;;x
+EVTDESC88017;卫士带进来一个遗留在宫外的盖住的篮子. 你以为这是某个下属送来的甜点, 兴冲冲地打开了盖子, 却发现了[From.GetTitledName]那满脸狰狞, 被戳了几个窟窿的人头。前额上, 刻了一个阿萨辛派的标记.;;;;;;;;;;x
 EVTOPTA88017;我没了胃口...;;;;;;;;;;x
 EVTDESC88018;当你和[From.GetTitledFirstName]在宫内花园里游玩时, 你看到一道阳光闪过, 一把飞刀闪耀着埋入了你朋友的咽喉. 你的卫兵迅速地将你带离至安全之地, 但你还是瞥见了宫墙上穿梭着的一个穿着斗篷的刺客...;;;;;;;;;;x
-EVTOPTA88018;哈萨辛派! 他们的目标是我吗?;;;;;;;;;;x
-EVTDESC88019;带着一身冷汗你突然醒来, 一个强烈的感觉告诉你有些事不对劲. 帐篷里摇曳的烛光下, 可见一盘热饼干和一把插在床边的匕首. 匕首抹了毒, 上面还插着一张纸条: "有一千种方法可以杀掉一个[Root.GetManWoman], [Root.GetFirstName]. 而哈萨辛每个都知道.";;;;;;;;;;x
+EVTOPTA88018;阿萨辛派! 他们的目标是我吗?;;;;;;;;;;x
+EVTDESC88019;带着一身冷汗你突然醒来, 一个强烈的感觉告诉你有些事不对劲. 帐篷里摇曳的烛光下, 可见一盘热饼干和一把插在床边的匕首. 匕首抹了毒, 上面还插着一张纸条: "有一千种方法可以杀掉一个[Root.GetManWoman], [Root.GetFirstName]. 而阿萨辛派每个都知道.";;;;;;;;;;x
 EVTOPTA88019;卫兵! 给我搜!;;;;;;;;;;x
 EVTDESC7700;[Root.PlotTarget.GetTitledName]近期计划访问[Root.PlotTarget.Location.GetName], 坐敞篷马车接受民众的欢呼和赞誉. 肯定会有大量的亲兵护卫, 但是如果在[Root.PlotTarget.GetTitle]必经之路的关键屋顶上埋伏几名弓手会发生什么呢...;;;;;;;;;;x
 EVTOPTA7700;我的同谋会找到一些能人...;;;;;;;;;;x
