--- a/localisation/v1_07.csv
+++ b/localisation/v1_07.csv
@@ -210,7 +210,7 @@ mountain_terrain_leader;山地地形专家;;;;;;;;;;x
 mountain_terrain_leader_desc;这个人物是一名在山地地形上统率军队的专家.;;;;;;;;;;x
 desert_terrain_leader;沙漠地形专家;;;;;;;;;;x
 desert_terrain_leader_desc;这个人物是一名在沙漠地形上统率军队的专家.;;;;;;;;;;x
-holy_warrior;圣战士;;;;;;;;;;x
+holy_warrior;骑士团;;;;;;;;;;x
 holy_warrior_desc;这个人物在同野蛮人和异教徒作战时战斗力最强，但在同相同信仰的敌人作战时犹豫不决.;;;;;;;;;;x
 unyielding_leader;不屈的;;;;;;;;;;x
 unyielding_leader_desc;这个人物会顽强的战斗到最后一刻，并且强迫他的部下同他一起这样做，拒绝任何妥协.;;;;;;;;;;x
@@ -313,7 +313,7 @@ EVTOPTA94054;销量确实得到了提升...;;;;;;;;;;x
 EVTTOOLTIP94055;你定下了吟游诗人.;;;;;;;;;;x
 EVTDESC94055;你为你的酒馆开业雇佣的诗人来自遥远的地方，说着一种怪异的语言，但是如果抛开这些不管，他的诗歌具有一种奇怪的强制性的优雅和韵律.至少大家都这么认为.销量也很好，所以你没有任何理由去抱怨.;;;;;;;;;;x
 EVTOPTA94055;不要中断蜂蜜酒的供应！;;;;;;;;;;x
-EVTTOOLTIP94056;你定下了阉人.;;;;;;;;;;x
+EVTTOOLTIP94056;你定下了阉人。;;;;;;;;;;x
 EVTDESC94056;阉人歌手的歌声与你之前听过的任何歌声都截然不同，但是不幸的是在舞台附近爆发了一场大规模的斗殴，因为人们都挤在台边上想要知道这尖细的声音是从哪里传出来的.当斗殴蔓延到台上的时候，你还在因为歌手的高音尖叫而耳鸣...;;;;;;;;;;x
 EVTOPTA94056;至少现在歌声已经结束了.;;;;;;;;;;x
 EVTTOOLTIP94057;你定下了那头野驴.;;;;;;;;;;x
