--- a/localisation/v1_09b.csv
+++ b/localisation/v1_09b.csv
@@ -1,8 +1,8 @@
 ﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 d_venetian_navy;亚德里亚海舰队;;;;;;;;;;x
 d_venetian_navy_adj;亚德里亚海舰队;;;;;;;;;;x
-d_genoese_navy;力久利安海舰队;;;;;;;;;;x
-d_genoese_navy_adj;力久利安海舰队;;;;;;;;;;x
+d_genoese_navy;利古里亚海舰队;;;;;;;;;;x
+d_genoese_navy_adj;利古里亚海舰队;;;;;;;;;;x
 d_hanseatic_navy;波罗的海船队;;;;;;;;;;x
 d_hanseatic_navy_adj;波罗的海船队;;;;;;;;;;x
 d_frisian_navy;北海船队;;;;;;;;;;x
@@ -17,8 +17,8 @@ d_scottish_band;苏格兰大队;;;;;;;;;;x
 d_scottish_band_adj;苏格兰大队;;;;;;;;;;x
 d_irish_band;爱尔兰大队;;;;;;;;;;x
 d_irish_band_adj;爱尔兰大队;;;;;;;;;;x
-d_alan_band;“亚伦骑手”;;;;;;;;;;x
-d_alan_band_adj;亚伦;;;;;;;;;;x
+d_alan_band;阿兰人大队;;;;;;;;;;x
+d_alan_band_adj;阿兰人大队;;;;;;;;;;x
 d_nubian_band;努比亚大队;;;;;;;;;;x
 d_nubian_band_adj;努比亚大队;;;;;;;;;;x
 k_genoa;热那亚;;;;;;;;;;x
@@ -37,9 +37,9 @@ d_gloucester_adj_norman;格洛斯特;;;;;;;;;;x
 d_gloucester_adj_english;格洛斯特;;;;;;;;;;x
 d_lancaster_adj_welsh;兰开斯特;;;;;;;;;;x
 title_patrician_heir;指定的继承人;;;;;;;;;;x
-title_patrician_heir_desc;此角色已被选作继承贵人头衔，以期其经营家业;;;;;;;;;;x
+title_patrician_heir_desc;此角色已被选作继承贵人头衔，以期其经营家业。;;;;;;;;;;x
 ANY_TRADE_POST_STARTS;任意贸易节点;;;;;;;;;;x
-religious_cb_succ_tip;§Y[Root.GetTitledFirstName]§!使得信奉[Root.GetPossPronoun]各领主臣服并取得§Y[This.GetFullBaseName]§!.\n内的其他头衔。;;;;;;;;;;x
+religious_cb_succ_tip;§Y[Root.GetTitledFirstName]§!使得信奉[Root.GetPossPronoun]宗教的各领主臣服并取得§Y[This.GetFullBaseName]§!内的其他头衔。\n;;;;;;;;;;x
 ultimogeniture;幼子继承制;;;;;;;;;;x
 succ_ultimogeniture;幼子继承制;;;;;;;;;;x
 succ_ultimogeniture_desc;幼子继承制，此继承法与更为常见的长子继承制相对，幼子继承制规定由最幼子有继承权。;;;;;;;;;;x
@@ -48,29 +48,29 @@ succ_tanistry;凯尔特选任法;;;;;;;;;;x
 succ_tanistry_desc;凯尔特酋长选举制，领主以及比领主低一至二等级的封臣皆可提名继承人，即太子——太子是从领主的王朝的成员中选出来的。封臣们更愿意从家族的其他支系中选择年长者，尤其是宣称者。;;;;;;;;;;x
 title_tanist;太子;;;;;;;;;;x
 TRIGGER_ULTIMOGENITURE_HEIR;幼子继承制继承人;;;;;;;;;;x
-PATRICIAN_WEALTH_PRESTIGE;贵人的财富: $GOLD$;;;;;;;;;;x
+PATRICIAN_WEALTH_PRESTIGE;贵人的财富：$GOLD$;;;;;;;;;;x
 CANT_BUILD_TRADEPOST_HOSTILE;与$WHO$无敌对关系;;;;;;;;;;x
 ca_con_wall_6;狄奥多西城墙;;;;;;;;;;x
 ca_con_wall_6_desc;狄奥多西城墙建于五世纪初，罗马皇帝狄奥多西二世统治时期，但这些城墙现在仍是人类建造的最易守难攻的堡垒之一。;;;;;;;;;;x
-ct_rep_arsenal_1_desc;一小批集中修建于共和国首都的修船所周围的造船厂和兵工厂;;;;;;;;;;x
+ct_rep_arsenal_1_desc;一小批集中修建于共和国首都的码头周围的造船厂和兵工厂;;;;;;;;;;x
 ct_rep_arsenal_1;兵工厂;;;;;;;;;;x
 ct_rep_arsenal_2;兵工厂;;;;;;;;;;x
 ct_rep_arsenal_3;兵工厂;;;;;;;;;;x
-ct_rep_arsenal_2_desc;一批集中修建于共和国首都的修船所周围的防卫森严的造船厂和兵工厂;;;;;;;;;;x
+ct_rep_arsenal_2_desc;一批集中修建于共和国首都的码头周围的防卫森严的造船厂和兵工厂;;;;;;;;;;x
 ct_rep_arsenal_3_desc;这些守卫森严的造船厂、兵工厂完全不亚于一个围绕着共和国首都码头的军工复合体。;;;;;;;;;;x
 usurp_tp;侵夺贵人的贸易节点;;;;;;;;;;x
 usurp_tp_desc;作为[Root.GetTitle]，用你的行政点数侵夺敌对家族的贸易节点。;;;;;;;;;;x
-petition_doge_for_tp;[Root.Liege.GetTitle]请求贸易节点;;;;;;;;;;x
-petition_doge_for_tp_desc;[Root.Liege.GetTitle] 以公平的名义请求贸易节点。;;;;;;;;;;x
-forbid_daughter_tooltip;你命令你的女儿停止可耻的行为;;;;;;;;;;x
+petition_doge_for_tp;向[Root.Liege.GetTitle]请求贸易节点;;;;;;;;;;x
+petition_doge_for_tp_desc;以公平的名义向 [Root.Liege.GetTitle] 请求贸易节点。;;;;;;;;;;x
+forbid_daughter_tooltip;你命令你的女儿停止可耻的行为。;;;;;;;;;;x
 EVTTOOLTIP_REP_500;你的请求已送达。;;;;;;;;;;x
-EVTDESC_REP_500;[From.GetOnlyDynastyName]家族现在已一贫如洗，然而其他贵人家族却财源滚滚。毋庸置疑，这种不公平的财富分配不符合共和国的最大利益。你能考虑一下在你力所能及的范围内转移贸易节点吗?\n\n此致,\n[From.GetTitledName];;;;;;;;;;x
+EVTDESC_REP_500;[From.GetOnlyDynastyName]家族现在已一贫如洗，然而其他贵人家族却财源滚滚。毋庸置疑，这种不公平的财富分配不符合共和国的最大利益。你能考虑一下在你力所能及的范围内转移贸易节点吗？\n\n此致，\n[From.GetTitledName];;;;;;;;;;x
 EVTOPTA_REP_500;这不是施舍！;;;;;;;;;;x
-EVTOPTB_REP_500;很好！看看我们能做什么...;;;;;;;;;;x
+EVTOPTB_REP_500;很好！看看我们能做什么……;;;;;;;;;;x
 EVTDESC_REP_501;你的请求已被拒绝。你只能自己建造它们。\n\n此致,\n[From.GetTitledName];;;;;;;;;;x
 EVTOPTA_REP_501;但是......但是......;;;;;;;;;;x
-EVTTOOLTIP_REP_502;你告知该贵人,他得割舍一些贸易节点了。;;;;;;;;;;x
-EVTDESC_REP_502;整体而言，[FromFrom.GetOnlyDynastyName]家族在处理对共和国不利的事务方面做的不尽如人意。因此，我认为我该履行我作为[From.GetTitle]的职责，让他们滚回去。遗憾的是，这意味着您要把您众多贸易节点中的一部分授予他们。我相信您能理解这么做的必要性吧。\n\n此致,\n[From.GetTitledName];;;;;;;;;;x
+EVTTOOLTIP_REP_502;你告知该贵人，他得割舍一些贸易节点了。;;;;;;;;;;x
+EVTDESC_REP_502;整体而言，[FromFrom.GetOnlyDynastyName]家族在处理对共和国不利的事务方面做的不尽如人意。因此，我认为我该履行我作为[From.GetTitle]的职责，让他们滚回去。遗憾的是，这意味着您要把您众多贸易节点中的一部分授予他们。我相信您能理解这么做的必要性吧。\n\n此致，\n[From.GetTitledName];;;;;;;;;;x
 EVTOPTA_REP_502;这简直罪大恶极！;;;;;;;;;;x
 EVTTOOLTIP_REP_503;你已穷途末路，只能答应他的请求！;;;;;;;;;;x
 EVTDESC_REP_503;似乎我已山穷水尽。我相信，在他们昏庸的统治下，贸易节点将会处于水深火热之中。如果你认为这是最好的选择，我会把这些贸易节点转手给这个贫民和反叛者的家族。\n\n此致,\n[From.GetTitledName];;;;;;;;;;x
