--- a/localisation/v2_01.csv
+++ b/localisation/v2_01.csv
@@ -1,6 +1,6 @@
 ﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
-ENDGAME_TEXT_JEWISH;你已经成为了犹太人,由于没有亚伯拉罕之裔DLC,因此,不能继续游戏,游戏结束.;;;;;;;;;;x
+ENDGAME_TEXT_JEWISH;您已经成为了犹太人角色，因此在未激活亚伯拉罕之裔DLC的情况下将无法继续游戏。;;;;;;;;;;x
 NOT_ALLOWED_JEWISH;由于没有激活亚伯拉罕之裔DLC，你不能扮演§Y犹太人§!！;;;;;;;;;;x
 NOT_ALLOWED_JEWISH_MP;§Y$PLAYER$§!不能在没有激活亚伯拉罕之裔DLC的情况下扮演§Y犹太人§!。;;;;;;;;;;x
-RD_NOT_PLAYABLE_WITHOUT_SOA_DLC;尚未拥有亚伯拉罕之裔DLC,不能扮演犹太人;;;;;;;;;;x
-IRONMAN_MODE_SAVEGAME_DESC;存档文件已经被修改或损坏,不能在铁人模式下运行.;;;;;;;;;;x
+RD_NOT_PLAYABLE_WITHOUT_SOA_DLC;尚未拥有亚伯拉罕之裔DLC，不能扮演犹太人;;;;;;;;;;x
+IRONMAN_MODE_SAVEGAME_DESC;存档文件已经被修改或损坏，无法在铁人模式下运行。;;;;;;;;;;x
