--- a/localisation/v2_11.csv
+++ b/localisation/v2_11.csv
@@ -8,5 +8,5 @@ VS_REL_ENEMY;针对宗教敌人的攻击;;;;;;;;;;x
 EXILE_IMPRISONED_INTERACTION_3;放逐该人物将花费你§R$PIETY$§!$PIETYNAME$。;;;;;;;;;;x
 S_TRO;ST;;;;;;;;;;x
 defenderbonus_jungle;丛林;;;;;;;;;;x
-HAS_AUTOCEPHALY;拥有东正教自治教会;;;;;;;;;;x
-HAS_NOT_AUTOCEPHALY;没有东正教自治教会;;;;;;;;;;x
+HAS_AUTOCEPHALY;拥有东正教自主教会;;;;;;;;;;x
+HAS_NOT_AUTOCEPHALY;没有东正教自主教会;;;;;;;;;;x
