--- a/localisation/v2_20b.csv
+++ b/localisation/v2_20b.csv
@@ -131,7 +131,7 @@ ASK_FOR_DIVORCE_INTERACTION_1;离异 §Y[Actor.Spouse.GetFirstName]§! 会让你
 DIVORCE_INTERACTION_1;离婚会让你损失 §R$COST$§! 威望.;;;;;;;;;;x
 ERA_CHAR_INFO_3096;生在开罗, 穆斯坦绥尔在6岁是成为了哈里发. 早年, 他的母亲阿布塔米姆作为摄政维护她儿子的安全. 到成年时, 他在一群强力的倭色尔簇拥下统治. 他的时代充斥着混乱和饥荒, 嬴弱的国度成为多个突厥大佣兵团的目标.穆斯坦绥尔从未完全掌握实权,但他仍旧是历史上在位最长的哈里发.;;;;;;;;;;x
 ERA_CHAR_INFO_3040;阿尔普 阿斯兰,塞尔柱的曾孙, 出生时叫穆罕穆德 本 达乌 察合里. 但他因他的强大,优秀的作战技巧和勇气而得名, 意为"勇敢的狮子". 早年,他继承了父亲成为呼罗珊的统领. 在1064年继承危机时他通过武力取得了苏丹的名号, 后来统治了广袤的塞尔柱帝国. 他对拜占庭帝国发起战争并在曼齐刻尔特战役里彻底击败了他们, 捕获了拜占庭皇帝. 这场胜利铺垫了日后突厥人在安纳托利亚的崛起, 也是触发十字军东征的原因之一. 他死也未辱其名, 在42岁时, 拒绝守卫的帮助对付一名叛军囚犯时死在了.;;;;;;;;;;x
-ERA_CHAR_INFO_457620;作为卡斯提尔和列昂的国王, 费德南是再征服运动中最重要的一个人物,最终将穆斯林从伊比利亚赶了出去. 卡斯提尔在费德南的统治下收纳了大片南西班牙的领土, 不仅通过武力,还使用外交手段征服了安达卢西亚人的城市,例如科尔多巴和塞维利亚. 他死后四百年, 费迪南被教宗克莱芒十世勘定为圣人, 纳入史册.;;;;;;;;;;x
+ERA_CHAR_INFO_457620;作为卡斯蒂利亚和莱昂的国王, 费德南是再征服运动中最重要的一个人物,最终将穆斯林从伊比利亚赶了出去. 卡斯蒂利亚在费德南的统治下收纳了大片南西班牙的领土, 不仅通过武力,还使用外交手段征服了安达卢西亚人的城市,例如科尔多巴和塞维利亚. 他死后四百年, 费迪南被教宗克莱芒十世勘定为圣人, 纳入史册.;;;;;;;;;;x
 ERA_CHAR_INFO_167219;汉萨联盟是由一群由吕贝克主导日耳曼城市所组成,取代维斯比成为在中世纪以及后来时代主导波罗的海贸易的商业力量.他们的办事处,"孔托", 遍布主要的贸易港口和城市, 西至伦敦,东至诺夫哥罗德. 最终联盟强大到了能直接挑战大国, 一个例子便是在14世纪,他们占领和洗劫了丹麦首都哥本哈根.;;;;;;;;;;x
 ERA_CHAR_INFO_212513;被同时代的人成为世间奇迹, 弗里德里希二世是神圣罗马帝国在中世纪最强大的皇帝之一. 他的统治常常伴随着与教廷的战争. 弗里德里希被绝罚过四次, 教宗额我略九世甚至指认他为敌基督. 他在第六次十字军运动中参与了少许战斗,但成功的商定了让基督徒控制耶路撒冷. 1250年,50岁的他的死伴随着同族的消亡,最终为霍亨斯陶芬王朝画上了句号.;;;;;;;;;;x
 ERA_CHAR_INFO_74656;Singhana II 作为一个强大的印度君主,把他的国度向东北南大幅的扩张. 作为科学和艺术的拥护者, 他在Singhanapur建立了天文学院.;;;;;;;;;;x
@@ -158,11 +158,11 @@ EVTOPTB_CM_1100;现在先不要操心他吧.;;;;;;;;;;x
 EVTTITLE_CM_1003;[From.GetFirstName]之死;;;;;;;;;;x
 tribal_barony_of;部落土地;;;;;;;;;;x
 EVTTITLE_CM_1010;伦巴第公主;;;;;;;;;;x
-EVTDESC_CM_1010;陛下,您敌人的实力与日俱增, 即便您的封臣各个忠心不二, 但在法兰克人国度之外寻求盟友也是良谋. 如果您愿意,迎娶伦巴第国王诸多女儿之一,定可实力大增,以便对抗您弟弟的诡计.;;;;;;;;;;x
+EVTDESC_CM_1010;陛下，您敌人的实力与日俱增，即便您的封臣各个忠心不二，但在法兰克人国度之外寻求盟友也是良谋。如果您愿意，迎娶伦巴第国王诸多女儿之一，定可实力大增，以便对抗您弟弟的诡计。;;;;;;;;;;x
 EVTOPTA_CM_1010;这场婚姻好处多多.;;;;;;;;;;x
 EVTOPTB_CM_1010;我才不要让伦巴第人上我床呢!;;;;;;;;;;x
 EVTTITLE_CM_1011;伦巴第王后;;;;;;;;;;x
-EVTDESC_CM_1011;陛下, 不少臣属对此不满. 迎娶 [Root.Spouse.GetFirstName] 自然在政治上有其作用, 但娶一个来自伦巴第,我们旧敌的公主对很多人来说难以接受. 如今这种不满已经可能导致您失去一些贵族的支持. 现在修了她还为时不晚..;;;;;;;;;;x
+EVTDESC_CM_1011;陛下，不少臣属对此不满。迎娶 [Root.Spouse.GetFirstName] 自然在政治上有其作用，但娶一个来自伦巴第——我们旧敌的公主对很多人来说难以接受。如今这种不满已经可能导致您失去一些贵族的支持。现在休了她还为时不晚……;;;;;;;;;;x
 EVTOPTA_CM_1011;我就知道, 修了她!;;;;;;;;;;x
 EVTOPTB_CM_1011;她现在是我的王后, 也是他们的王后.;;;;;;;;;;x
 EVTDESC_CM_1076;[From.GetDynName], 死去不久的[FromFrom.GetTitledName]的遗孀, 来到你门前, 乞求给予她与她孩子保护. 她声称她亡夫险恶的兄弟会毫不留情的谋杀她们, 以取得对国度的控制.;;;;;;;;;;x
